<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/left_right_margin_scrollview_register_page"
        android:layout_marginRight="@dimen/left_right_margin_scrollview_register_page" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/title_register_page"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/subtitle_register_page" />

            <RelativeLayout
                android:id="@+id/relativelayout_avatar"
                android:layout_width="@dimen/avatar_width"
                android:layout_height="@dimen/avatar_height"
                android:background="@drawable/empty_avatar_background"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/textview_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/text_avatar_register_page"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageview_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:visibility="gone"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/edittext_background"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="@dimen/padding_edittext_register_page"
                android:hint="@string/firstname_edittext_register_page"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/padding_edittext_register_page"
                android:hint="@string/email_edittext_register_page"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_edittext_register_page"
                android:hint="@string/password_edittext_register_page"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/websiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/edittext_background"
                android:inputType="textWebEditText"
                android:maxLines="1"
                android:padding="@dimen/padding_edittext_register_page"
                android:hint="@string/website_edittext_register_page"
                android:textColorHint="@color/black" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right_margin_button_register_page"
        android:layout_marginRight="@dimen/left_right_margin_button_register_page"
        android:layout_marginBottom="@dimen/bottom_margin_button_register_page"
        android:text="@string/submit_button_register_page"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:padding="@dimen/padding_edittext_register_page"
        android:textAllCaps="false" />

</LinearLayout>
